fixed minor async and socket errors + output polishing

--- a/components/scraper.ipynb
+++ b/components/scraper.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +347,43 @@
     "        divided_data[k].append(llm_output[n])\n",
     "        n+=1\n",
     "    \n",
-    "    return divided_data\n"
+    "    return divided_data\n",
+    "\n",
+    "# Get Accurate Element Count based on sub-ids\n",
+    "def get_accurate_element_count(sub_ids, indices, divided_scraped_data):\n",
+    "    return_data = []\n",
+    "    first_index = 0\n",
+    "    i = 0\n",
+    "    first_index = 0\n",
+    "    for index in indices:\n",
+    "        if index == 0:\n",
+    "            continue\n",
+    "        if len(divided_scraped_data[i]) == 0:\n",
+    "            i+=1\n",
+    "            return_data.append(0)\n",
+    "            continue\n",
+    "        else:\n",
+    "            i+=1\n",
+    "        # Get Maximum Element\n",
+    "        max_element = sub_ids[index-1]\n",
+    "        # Clean Maximum Element\n",
+    "        clean_index = max_element.index(\".\")\n",
+    "        # Convert to Integer\n",
+    "        int_max_element = int(max_element[:clean_index])\n",
+    "        # Deduct from first index\n",
+    "        int_max_element = int_max_element - first_index\n",
+    "        # Update first index\n",
+    "        first_index = first_index + int_max_element\n",
+    "        return_data.append(int_max_element)\n",
+    "    \n",
+    "    # For the last group\n",
+    "    max_element = sub_ids[len(sub_ids)-1-1]\n",
+    "    clean_index = max_element.index(\".\")\n",
+    "    int_max_element = int(max_element[:clean_index])\n",
+    "    int_max_element = int_max_element - first_index\n",
+    "    first_index = int_max_element\n",
+    "    return_data.append(int_max_element)\n",
+    "    return return_data"
    ]
   },
   {
@@ -355,6 +391,43 @@
    "metadata": {},
    "source": [
     "## ~What follows from here are old / legacy code from previous cycles~"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "max element: 2.2\n",
+      "int max element: 2\n",
+      "processed int max element: 2\n",
+      "max element: 49.0\n",
+      "int max element: 49\n",
+      "processed int max element: 47\n",
+      "max element: 58.1\n",
+      "int max element: 58\n",
+      "processed int max element: 9\n",
+      "max element: 69.1\n",
+      "int max element: 69\n",
+      "processed int max element: 11\n",
+      "max element: 70.3\n",
+      "int max element: 70\n",
+      "processed int max element: 1\n",
+      "[2, 47, 9, 11, 0, 1]\n",
+      "70\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "indices = get_divide_indices(divide_scraped_data(data[0]))\n",
+    "element_counts = get_accurate_element_count(data[1], indices, divide_scraped_data(data[0]))\n",
+    "print(element_counts)\n",
+    "print(sum(element_counts))"
    ]
   },
   {
