Cleanup preparations (listing dependencies and adding credits or references)

--- a/components/llm.ipynb
+++ b/components/llm.ipynb
@@ -93,15 +93,96 @@
    "metadata": {},
    "source": [
     "##### Modelfile\n",
-    "- replace input content with the context"
+    "- for adapting the fine-tuned model to Llama3.1 in Ollama"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
+   "source": [
+    "FROM llama3.1\n",
+    "\n",
+    "ADAPTER ./\n",
+    "\n",
+    "TEMPLATE \"\"\"{{ if .System }}{{ .System }}{{ end }}\n",
+    "\n",
+    "{{ if .Prompt }}### Instruction:\n",
+    "{{ .Prompt }}{{ end }}\n",
+    "\n",
+    "### Input:\n",
+    "You are an expert in software quality assurance specializing in usability testing.\n",
+    "\n",
+    "Consider the following usability aspects:\n",
+    "Accessibility (keyboard navigation, screen reader support, etc.)\n",
+    "Responsiveness (behavior across different screen sizes, etc.)\n",
+    "Feedback (hover effects, click responses, error messages, etc.)\n",
+    "Interactivity (expected behavior when clicked, typed into, or focused, etc.)\n",
+    "User experience (clarity of labels, ease of use, etc.)\n",
+    "\n",
+    "Avoid descriptions like \"The user\" or \"The test participant\" and should instead focus on direct, executable actions.\n",
+    "\n",
+    "The functional usability test case has the following aspects, separated by a `~`:\n",
+    "- **Objective**: Clearly state the objective of the test.\n",
+    "- **Preconditions**: List any preconditions that need to be met.\n",
+    "- **Test Steps**: Provide a step-by-step guide for the test. Each step should be a direct command, not a description.\n",
+    "- **Expected Output**: Describe the expected output.\n",
+    "\n",
+    "Output format example, start with the objective directly and avoid saying \"here is the test case\" or the name of the testcase and end the output after writing the expected output. STRICTLY FOLLLOW THIS FORMAT:\n",
+    "[Describe the objective] \n",
+    "\n",
+    "~ \n",
+    "[List preconditions, use dashes] \n",
+    "\n",
+    "~ \n",
+    "[Step-by-step guide, use numbers] \n",
+    "\n",
+    "~ \n",
+    "[Describe the expected output, use dashes, avoid having more than 5 expected outputs]\n",
+    "\n",
+    "### Response:\n",
+    "{{ .Response }}<|end_of_text|>\n",
+    "\"\"\"\n",
+    "\n",
+    "PARAMETER stop \"<|end_of_text|>\"\n",
+    "PARAMETER temperature 0\n",
+    "PARAMETER num_predict 2048\n",
+    "\n",
+    "PARAMETER stop \"Note:\"\n",
+    "PARAMETER stop \"The final answer\"\n",
+    "PARAMETER stop \"The response\"\n",
+    "PARAMETER stop \"The expected output should be displayed correctly for all test steps above.\"\n",
+    "PARAMETER stop \"EOF\"\n",
+    "PARAMETER stop \"###\"\n",
+    "PARAMETER stop \"End of Response\"\n",
+    "PARAMETER stop \"```\"\n",
+    "PARAMETER stop \". -\"\n",
+    "PARAMETER stop \".  -\"\n",
+    "PARAMETER stop \"  \"\n",
+    "PARAMETER stop \"The functional usability test case\"\n",
+    "PARAMETER stop \"\n",
+    "\n",
+    "The\"\n",
+    "\n",
+    "SYSTEM \"\"\"Below is an instruction that describes a task, paired with an input that provides further context. Write a response that appropriately completes the request.\"\"\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###### Main Modelfile"
+    "## ~What follows from here are old / legacy code from previous cycles~"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "raw",
