Cleanup + Basic Testing

--- a/components/table_generator.ipynb
+++ b/components/table_generator.ipynb
@@ -78,7 +78,7 @@
     "        split_test_case = test_case.split('~')\n",
     "        \n",
     "        # Validate and skip if split is a failure\n",
-    "        if len(split_test_case) != 4:\n",
+    "        if len(split_test_case) == 4:\n",
     "            # Test Case ID\n",
     "            id.append(ids[i])\n",
     "            # Test Case Objective\n",
