category calculation bugfix

--- a/components/scraper.ipynb
+++ b/components/scraper.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,9 +354,11 @@
     "    return_data = []\n",
     "    first_index = 0\n",
     "    i = 0\n",
+    "    not_index_zero = True\n",
     "    first_index = 0\n",
     "    for index in indices:\n",
-    "        if index == 0:\n",
+    "        if index == 0 and not_index_zero == True:\n",
+    "            not_index_zero = False\n",
     "            continue\n",
     "        if len(divided_scraped_data[i]) == 0:\n",
     "            i+=1\n",
@@ -395,37 +397,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data = data_scrape(\"https://web.mit.edu/education/\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "max element: 2.2\n",
-      "int max element: 2\n",
-      "processed int max element: 2\n",
-      "max element: 49.0\n",
-      "int max element: 49\n",
-      "processed int max element: 47\n",
-      "max element: 58.1\n",
-      "int max element: 58\n",
-      "processed int max element: 9\n",
-      "max element: 69.1\n",
-      "int max element: 69\n",
-      "processed int max element: 11\n",
-      "max element: 70.3\n",
-      "int max element: 70\n",
-      "processed int max element: 1\n",
-      "[2, 47, 9, 11, 0, 1]\n",
-      "70\n"
+      "index 0\n",
+      "True\n",
+      "97\n",
+      "13\n",
+      "10\n",
+      "True\n",
+      "[0, 97, 13, 10, 0, 0]\n",
+      "120\n"
      ]
     }
    ],
@@ -435,6 +430,23 @@
     "element_counts = get_accurate_element_count(data[1], indices, divide_scraped_data(data[0]))\n",
     "print(element_counts)\n",
     "print(sum(element_counts))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 97, 123, 143, 143]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(indices)"
    ]
   },
   {
